<resources>
    <string name="app_name">ContentProvider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Nick Names Directory</string>
    <string name="name">Enter Name</string>
    <string name="nickname">Enter Nick Name</string>
    <string name="add">ADD NEW</string>
    <string name="show">SHOW ALL</string>
    <string name="delete">DELETE ALL</string>
</resources>